Adding new SmoothScroll App

--- a/smoothScrollCss/index.html
+++ b/smoothScrollCss/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Smooth Scroll</title>
+	<title>Smooth Scroll CSS</title>
+	<link rel="stylesheet" type="text/css" href="smoothScroll.css">
 </head>
 <body>
 	<span id="top"></span>
@@ -66,6 +67,5 @@
 		</ul>
 	</nav>
 	<a href="#top">To top</a>
-	<script type="text/javascript" src="smoothScroll.js"></script>
 </body>
 </html>
